src/server/run/snapshots/viguno__server__actix_server__hpo_terms__test__hpo_terms_term_id_exact_no_genes.snap
---
source: src/server/actix_server/hpo_terms.rs
expression: "&run_query(\"/hpo/terms?term_id=HP:0000023\").await?"
---
version:
  hpo: 2023-04-05
  viguno: 0.0.0
query:
  term_id: "HP:0000023"
  name: ~
  max_results: 100
  genes: false
result:
  - term_id: "HP:0000023"
    name: Inguinal hernia
    definition: Protrusion of the contents of the abdominal cavity through the inguinal canal.
    synonyms: ~
    xrefs:
      - "MEDDRA:10022016"
      - "MSH:D006552"
      - "SNOMEDCT_US:396232000"
      - "UMLS:C0019294"

